src/examples/test-doubles/ReturnSelfExampleTest.php.out
./tools/phpunit tests/ReturnSelfExampleTest.php
PHPUnit 10.5.38 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.4.1

E                                                                   1 / 1 (100%)

Time: 00:00, Memory: 22.88 MB

There was 1 error:

1) ReturnSelfExampleTest::testReturnSelf
PHPUnit\Framework\MockObject\Generator\ClassIsFinalException: Class "SomeClass" is declared "final" and cannot be doubled

/path/to/tests/ReturnSelfExampleTest.php:9

ERRORS!
Tests: 1, Assertions: 0, Errors: 1.
